2006-03-17  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/ examples, instrument-notation,
	advnaced-notation: minor fixes from mailist.

2006-03-17  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/user/tutorial.itely (First steps): change example
	to verbatim.  

2006-03-17  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/ examples, advanced: minor changes from mailist.

	* THANKS: add Geoff Horton, for documentation stuff.

2006-03-17  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* python/lilylib.py (system): revert have_select kludge.

	* Documentation/user/tutorial.itely (Commenting input files):
	update version numbers in doc. 

	* scm/define-grob-interfaces.scm (multi-measure-interface): add
	bound-padding to multi-measure-interface

2006-03-16  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* input/test/engraver-example.ily: update version number.

	* VERSION (PACKAGE_NAME): release 2.7.39

	* lily/note-spacing.cc (get_spacing): heighten threshold where
	accidentals/arpeggios influence previous spacing fully.

	* lily/rest.cc (y_offset_callback): only use direction if
	staff-position wasn't set before.

	* lily/bar-number-engraver.cc: add support for
	barNumberAlignSymbol. 
	add ADD_ACKNOWLEDGER() call for break_aligned. Fixes bar-number-breathe

	* lily/pointer-group-interface.cc (set_ordered): new function. 
	(add_unordered_grob): new function.

	* lily/grob-array.cc (Grob_array): grob-arrays are always assumed
	to ordered, unless the opposite has been proved.  This fixes
	random reordering of large object groups across linebreaks,
	eg. beams.

	* lily/main.cc (do_chroot_jail): printf format fix.

	* lily/tie-formatting-problem.cc (generate_configuration):
	multiply y-shift for dot with direction.
 
	* scm/define-markup-commands.scm (note-by-number): put (magstep
	size) in y-attach too.

	* Documentation/topdocs/NEWS.tely (Top): show override.

	* scm/define-grobs.scm (all-grob-descriptions): reinstate neutral
	direction for stems.
	